# ai-coding-agent-factory

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-release.yml
agents/: architect.md  coder.md  documenter.md  reviewer.md  tester.md
cli/: agent.ps1
docs/: api-reference.md  architecture.md  deployment.md  hardware-requirements.md  phase-roadmap.md  skills-guide.md
executor/: Dockerfile  main.py  requirements.txt
orchestrator/: Dockerfile  agent_bus.py  agent_manager.py  ast_indexer.py  command_parser.py  config.py  context_manager.py  debate_engine.py  executor_client.py  file_watcher.py  fine_tune_collector.py  gateway.py  main.py  memory_manager.py  metrics.py  model_registry.py  models.py  patch_queue.py  requirements.txt  router.py  routing_policy.py  session_hooks.py  session_manager.py  skill_loader.py  task_queue.py  utils.py  webhook_handler.py
tests/: conftest.py
tests/integration/: test_api.py  test_phase2.py  test_phase3.py  test_phase35.py  test_phase4a.py  test_phase4b.py
tests/unit/: test_agent_bus.py  test_agent_manager.py  test_ast_indexer.py  test_command_parser.py  test_context_manager.py  test_debate_engine.py  test_executor_client.py  test_file_watcher.py  test_fine_tune_collector.py  test_gateway.py  test_memory_manager.py  test_metrics.py  test_model_registry.py  test_patch_queue.py  test_router.py  test_routing_policy.py  test_session_hooks.py  test_session_manager.py  test_streaming.py  test_task_queue.py  test_utils.py  test_webhook_handler.py
tui/: pyproject.toml
tui/tui/: README.md  __init__.py  aicaf.tcss  app.py  client.py  main.py  state.py  store.py  theme.py
tui/tui/layout/: session_layout.py
tui/tui/screens/: chat.py  command_palette.py  help.py  launcher.py  logs.py  model_config.py  new_project.py  new_session.py  project.py  session.py
tui/tui/services/: project_service.py  session_service.py
tui/tui/utils/: format.py  git.py
tui/tui/widgets/: agent_pane.py  dag_sidebar.py  footer_bar.py  header_bar.py  input_bar.py  model_panel.py  project_card.py  session_card.py
