[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-coding-agent-factory"
version = "0.1.0"
description = "A fully local, Dockerized, multi-agent AI coding system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ai", "agents", "coding", "llm", "local", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository  = "https://github.com/harshD42/ai-coding-agent-factory"
Issues      = "https://github.com/harshD42/ai-coding-agent-factory/issues"
Changelog   = "https://github.com/harshD42/ai-coding-agent-factory/blob/main/CHANGELOG.md"

# ── Ruff (linting + formatting) ───────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["orchestrator", "executor", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default args (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "models", "router", "agent_manager",
                     "context_manager", "memory_manager", "patch_queue",
                     "task_queue", "debate_engine", "skill_loader",
                     "session_hooks", "command_parser", "executor_client",
                     "utils", "metrics"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.12"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true